--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon app.ts",
-    "build": "tsc"
+    "build": "tsc && node ./build/project-builder.js"
   },
   "dependencies": {
     "express": "^4.18.1",
@@ -13,7 +13,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
     "dotenv": "^16.0.1",
+    "fs-extra": "^10.1.0",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
