--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nodemon app.ts",
-    "build": "tsc && node ./build/project-builder.js"
+    "build": "tsc && node build/project-builder.js"
   },
   "dependencies": {
     "express": "^4.18.1",
